(feat): unassigned participants list
Эндпоинт со списком нераспределённых студентов для ручной сборки команд
